@@ -1,3 +1,8 @@
+2015-08-27  Carl Hetherington  <cth@carlh.net>
+
+	* Fix creation of badly-named configuration
+	directories in some circumstances (#654).
+
 2015-08-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.46 released.
